renamed:    moc/config -> .moc/config 	modified:   compton.conf 	modified:   fish/config.fish 	new file:   fish/functions/check-space.fish 	new file:   fish/functions/clock.fish 	new file:   fish/functions/defrag-check-home.fish 	new file:   fish/functions/defrag-home-now.fish 	new file:   fish/functions/mail.fish 	deleted:    fish/functions/msfconsole.fish 	new file:   fish/functions/quick-space.fish 	new file:   fish/functions/quit.fish 	new file:   fish/functions/recu.fish

--- a/.moc/config
+++ b/.moc/config
@@ -114,7 +114,7 @@ ShowTimePercent = no
 #
 # Example:    Theme = laras_theme
 #
-Theme = red_theme
+Theme = yellow_red_theme
 
 # MOC directory (where pid file, socket and state files are stored).
 # You can use ~ at the beginning.
