--- a/compton.conf
+++ b/compton.conf
@@ -26,12 +26,12 @@ shadow-exclude = "n:s:dzen";
 menu-opacity = 1.0;
 inactive-opacity = 1.0;
 active-opacity = 1.0;
-frame-opacity = 1.0;
+frame-opacity = 0.5;
 #inactive-opacity-override = false;
 #alpha-step = 0.06;
 #inactive-dim = 0.2;
 #inactive-dim-fixed = true;
-blur-background = false;
+blur-background = true;
 blur-background-frame = false;
 blur-kern = "5x5box"
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
